--- a/resources/assets/sass/pages/texto/_texto.scss
+++ b/resources/assets/sass/pages/texto/_texto.scss
@@ -179,10 +179,13 @@
 
 .texto__details {
 	color: $white;
+
 	display: flex;
 	flex-flow: row;
 	flex-wrap: wrap;
 	flex-direction: row;
+	
+	font-size: ms(3);
 	margin-bottom: 1em;
 	font-family: $sans-serif;
 	text-transform: capitalize;
